e2e/tests/all/snapshots/select_field_open_mobile.snap
---
source: e2e/src/suite.rs
description: select_field at mobile (open)
expression: tree
---
LabelText
  StaticText "Fruit"
StaticText "Delivered with your next box."
generic [haspopup=listbox]
  StaticText "Banana"
button "Clear Fruit"
status [atomic] [live=polite]
StaticText "You can swap it until Friday."
StaticText "Pick a fruit."
combobox "Fruit" [expanded] [haspopup=listbox] [invalid] [required]
listbox "Fruit"
  group "Orchard"
    StaticText "Orchard"
    option "Apple" [selected=false]
      StaticText "Apple"
    option "Cherry" [disabled] [selected=false]
      StaticText "Cherry"
  group "Other"
    StaticText "Other"
    option "Banana" [selected]
      StaticText "Banana"
    option "Damson" [selected=false]
      StaticText "Damson"
    option "Elderberry" [selected=false]
      StaticText "Elderberry"
--> aria-controls [id="lsx-N-listbox"] (rendered above)
