e2e/tests/all/snapshots/select_field_rest_desktop.snap
---
source: e2e/src/suite.rs
description: select_field at desktop (rest)
expression: tree
---
LabelText
  StaticText "Fruit"
StaticText "Delivered with your next box."
combobox "Fruit" = Banana [expanded=false] [haspopup=listbox] [invalid] [required]
  StaticText "Banana"
button "Clear"
status [atomic] [live=polite]
StaticText "You can swap it until Friday."
StaticText "Pick a fruit."
