e2e/tests/all/snapshots/select_field_rest_mobile.snap
---
source: e2e/src/suite.rs
description: select_field at mobile (rest)
expression: tree
---
LabelText
  StaticText "Fruit"
generic
  StaticText "Delivered with your next box."
generic
  combobox "Fruit" = Banana [expanded=false] [haspopup=listbox] [invalid] [required]
    StaticText "Banana"
  button "Clear"
status [atomic] [live=polite]
generic
  StaticText "You can swap it until Friday."
generic
  StaticText "Pick a fruit."
