e2e/tests/all/snapshots/select_open_mobile.snap
---
source: e2e/src/suite.rs
description: select at mobile (open)
expression: tree
---
LabelText
  StaticText "Fruit"
combobox "Fruit" = Banana [expanded] [haspopup=listbox]
  StaticText "Banana"
status [atomic] [live=polite]
listbox "Fruit" [orientation=vertical]
  option "Apple" [selected=false]
    StaticText "Apple"
  option "Banana" [selected]
    StaticText "Banana"
  option "Cherry" [selected=false]
    StaticText "Cherry"
  option "Damson" [selected=false]
    StaticText "Damson"
  option "Elderberry" [selected=false]
    StaticText "Elderberry"
--> aria-controls [id="lsx-N-listbox"] (rendered above)
