e2e/tests/all/snapshots/select_rest_desktop.snap
---
source: e2e/src/suite.rs
description: select at desktop (rest)
expression: tree
---
LabelText
  StaticText "Fruit"
generic
  combobox "Fruit" = Banana [expanded=false] [haspopup=listbox]
    StaticText "Banana"
status [atomic] [live=polite]
