e2e/tests/all/snapshots/skeleton_loading_desktop.snap
---
source: e2e/src/suite.rs
description: skeleton at desktop (loading)
expression: tree
---
button "Stop loading"
  StaticText "Stop loading"
generic [busy=1]
