e2e/tests/all/snapshots/skeleton_loading_mobile.snap
---
source: e2e/src/suite.rs
description: skeleton at mobile (loading)
expression: tree
---
button "Stop loading"
  StaticText "Stop loading"
generic [busy=1]
